--- a/index.html
+++ b/index.html
@@ -92,9 +92,14 @@
         </section>
         <section class="sobre-nosotros">
             <img src="./img/carniceria.jpg" alt="">
-            <p>Somos un negocio donde trabajar con productos naturales de primera calidad, es nuestra mayor prioridad.
-                Desde productos frescos como carnes y verduras hasta productos de almacen y granja como enlatados,
-                huevos, empanizados y muchos más!</p>
+            <div>
+                <p>Somos un negocio donde trabajar con productos naturales de primera calidad, es nuestra mayor prioridad.
+                    Desde productos frescos como carnes y verduras hasta productos de almacen y granja como enlatados,
+                    huevos, empanizados y muchos más!</p>
+                <div>
+                    <button><a href="./pages/sobrenosotros.html">Conoce más</a></button>
+                </div>
+            </div>
         </section>
         <section class="productos">
             <h2>Servicios</h2>
@@ -127,28 +132,28 @@
         <h4>Productos Destacados</h4>
         <section class="grid-galeria">
             <div class="grid-item">
-                <img src="./img/almacenitem.jfif" alt="">
-                <h3>Imagen</h3>
+                <a href="./pages/servicios.html"><img src="./img/almacenitem.jfif" alt=""></a>
+                <h3>Atún</h3>
             </div>
             <div class="grid-item img-2">
-                <img src="./img/carbonitem.png" alt="">
-                <h3>Imagen</h3>
+                <a href="./pages/servicios.html"><img src="./img/carbonitem.png" alt=""></a>
+                <h3>Carbón</h3>
             </div>
             <div class="grid-item">
-                <img src="./img/carneitem.webp" alt="">
-                <h3>Imagen</h3>
+                <a href="./pages/servicios.html"><img src="./img/carneitem.webp" alt=""></a>
+                <h3>Carnicería</h3>
             </div>
             <div class="grid-item img-4">
-                <img src="./img/pescadoitem.jpg" alt="">
-                <h3>Imagen</h3>
+                <a href="./pages/servicios.html"><img src="./img/pescadoitem.jpg" alt=""></a>
+                <h3>Merluza</h3>
             </div>
             <div class="grid-item img-5">
-                <img src="./img/patitasitem.jpg" alt="">
-                <h3>Imagen</h3>
+                <a href="./pages/servicios.html"><img src="./img/patitasitem.jpg" alt=""></a>
+                <h3>Patitas</h3>
             </div>
             <div class="grid-item img-6">
-                <img src="./img/verdurasitem.jpg" alt="">
-                <h3>Imagen</h3>
+                <a href="./pages/servicios.html"><img src="./img/verdurasitem.jpg" alt=""></a>
+                <h3>Verdulería</h3>
             </div>
         </section>
     </main>
@@ -160,20 +165,9 @@
                     alt="Icono Facebook"></a>
             <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="./img/instagram.png"
                     alt="Icono Instagram"></a>
-            <div class="contacto">
-                <h3>Contacto</h3>
-                <div class="icons">
-                    <a href="callto:45459002"><img src="./img/telefono.png" alt="Icono telefono"></a>
-                </div>
-                <div class="icons">
-                    <a href="mailto:milton_xsiempre@hotmail.com"><img src="./img/email.png" alt="icono email"></a>
-                </div>
-                <div class="icons">
-                    <a
-                        href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img
-                            src="./img/ubicacion.png" alt="Icono ubicacion"></a>
-                </div>
-            </div>
+            <a href="callto:45459002"><img src="./img/telefono.png" alt="Icono telefono"></a>
+            <a href="mailto:milton_xsiempre@hotmail.com"><img src="./img/email.png" alt="icono email"></a>
+            <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="./img/ubicacion.png" alt="Icono ubicacion"></a>
             <div class="text-center">
                 <p>Granja-Verdulería La Única</p>
                 <p>Copyright © 2023. Todos los derechos reservados</p>
