--- a/pages/dondenosencontramos.html
+++ b/pages/dondenosencontramos.html
@@ -53,17 +53,17 @@
                     <p class="form-paraghrap">¿No estás registrado? <a href="#" class="form-link">Entra acá</a></p>
                     <div class="form-container">
                         <div class="form-group">
-                            <input type="text" id="name" class="form-imput" placeholder=" ">
+                            <input type="text" id="name" class="form-input" placeholder=" ">
                             <label for="name" class="form-label">Nombre</label>
                             <span class="form-line"></span>
                         </div>
                         <div class="form-group">
-                            <input type="text" id="user" class="form-imput" placeholder=" ">
+                            <input type="text" id="user" class="form-input" placeholder=" ">
                             <label for="user" class="form-label">Usuario</label>
                             <span class="form-line"></span>
                         </div>
                         <div class="form-group">
-                            <input type="text" id="password" class="form-imput" placeholder=" ">
+                            <input type="text" id="password" class="form-input" placeholder=" ">
                             <label for="password" class="form-label">Contraseña</label>
                             <span class="form-line"></span>
                         </div>
@@ -72,7 +72,7 @@
                 </form>
             </div>
             <div class="ubicacion">
-                <h2>Negocio</h2>
+                <h2>Negocio:</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.1522769504513!2d-58.4871560236405!3d-34.54969965464849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6952119a4d7%3A0xd1093a8fcda5473d!2sRuiz%20Huidobro%203643%2C%20C1430CJQ%20CABA!5e0!3m2!1ses!2sar!4v1681855027239!5m2!1ses!2sar"
                     width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy"
