--- a/pages/hacetupedido.html
+++ b/pages/hacetupedido.html
@@ -51,31 +51,36 @@
                 <form class="form">
                     <div class="form-container">
                         <div class="form-group">
-                            <input type="text" id="name" class="form-imput" placeholder=" ">
-                            <label for="name" class="form-label">Nombre</label>
+                            <input type="text" id="name" class="form-input" placeholder=" ">
+                            <label for="name" class="form-label">Nombre:</label>
                             <span class="form-line"></span>
                         </div>
                         <div class="form-group">
-                            <input type="text" id="apellido" class="form-imput" placeholder=" ">
-                            <label for="apellido" class="form-label">Apellido</label>
+                            <input type="text" id="apellido" class="form-input" placeholder=" ">
+                            <label for="apellido" class="form-label">Apellido:</label>
                             <span class="form-line"></span>
                         </div>
                         <div class="form-group">
-                            <input type="text" id="mail" class="form-imput" placeholder=" ">
-                            <label for="mail" class="form-label">Mail</label>
+                            <input type="text" id="mail" class="form-input" placeholder=" ">
+                            <label for="mail" class="form-label">Mail:</label>
                             <span class="form-line"></span>
                         </div>
                         <div class="form-group">
-                            <input type="text" id="telefono" class="form-imput" placeholder=" ">
-                            <label for="telefono" class="form-label">Telefono</label>
+                            <input type="text" id="telefono" class="form-input" placeholder=" ">
+                            <label for="telefono" class="form-label">Telefono:</label>
                             <span class="form-line"></span>
                         </div>
                         <div class="form-group">
-                            <input type="text" id="direccion" class="form-imput" placeholder=" ">
-                            <label for="direccion" class="form-label">Dirección</label>
+                            <input type="text" id="direccion" class="form-input" placeholder=" ">
+                            <label for="direccion" class="form-label">Dirección:</label>
                             <span class="form-line"></span>
                         </div>
-                        <input type="submit" class="form-submit" value="Entrar">
+                        <div class="form-group">
+                            <input type="text" id="metododepago" class="form-input" placeholder=" ">
+                            <label for="metododepago" class="form-label">Metodo de pago:</label>
+                            <span class="form-line"></span>
+                        </div>
+                        <input type="submit" class="form-submit" value="Enviar">
                     </div>
                 </form>
             </div>
