--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -40,20 +40,26 @@
         </nav>
     </header>
     <main>
-        <section class="quienessomos">
+        <section>
+            <section class="quienessomos">
             <h1>Sobre Nosotros</h1>
             <h2>¿Quiénes somos?</h2>
         </section>
         <section class="info-nos">
             <img src="../img/carniceria.jpg" alt="">
-            <p>Somos un negocio familiar de Granja, Verdulería y Carnicería ubicado en el barrio de Saavedra, Capital Federal. Estamos atendiendo al público desde el año 2016 donde al principio empezamos con lo que era solo un negocio de Verduleria, y donde poco a poco fuimos expandiendolo a Granja y Carnicería. Y lo que hoy en día es un negocio de Almacén también. Negocio totalmente atendido por los dueños y empleados de lunes a domingo. Siempre dispuestos a atenderlo con la mayor paciencia y amabalidad que pudiese esperar.</p>
+            <div>
+                <p>Somos un negocio familiar de Granja, Verdulería y Carnicería ubicado en el barrio de Saavedra, Capital Federal. Estamos atendiendo al público desde el año 2016 donde al principio empezamos con lo que era solo un negocio de Verduleria, y donde poco a poco fuimos expandiendolo a Granja y Carnicería. Y lo que hoy en día es un negocio de Almacén también. Negocio totalmente atendido por los dueños y empleados de lunes a domingo. Siempre dispuestos a atenderlo con la mayor paciencia y amabalidad que pudiese esperar.</p>
+            </div>
         </section>
         <section class="comotrabajamos">
             <h2>¿Cómo trabajamos?</h2>
         </section>
         <section class="info-nos">
-            <p>Nuestra mayor prioridad es la de trabajar con productos de primera calidad como nuestro pollo con su marca reconocida llamada "Calisa", huevos frescos, carne de ternera, verduras y frutas de primera calidad recién llegadas del mercado central por la madrugada, merluza fresca entregada solo los martes con stock limitado, almacén con un poco de todo, hamburguesas de pollo y carne hechas con productos y condimentos naturales, con muy poca grasa. Y por ultimo pero no menos importante, nuestras famosas milanesas tan pedidas y queridas por los clientes, hechas al momento y con productos frescos.</p>
+            <div>
+                <p>Nuestra mayor prioridad es la de trabajar con productos de primera calidad como nuestro pollo con su marca reconocida llamada "Calisa", huevos frescos, carne de ternera, verduras y frutas de primera calidad recién llegadas del mercado central por la madrugada, merluza fresca entregada solo los martes con stock limitado, almacén con un poco de todo, hamburguesas de pollo y carne hechas con productos y condimentos naturales, con muy poca grasa. Y por ultimo pero no menos importante, nuestras famosas milanesas tan pedidas y queridas por los clientes, hechas al momento y con productos frescos.</p>
+            </div>
             <img src="../img/frutas.jpeg" alt="">
+        </section>
         </section>
         <div class="fixed">
             <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp.png" alt=""></a>
@@ -62,22 +68,13 @@
     <footer>
         <div class="info">
             <h2>Nuestras redes sociales:</h2>
-            <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp2.png" alt=""></a>
-            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png"
-                    alt="Icono Facebook"></a>
-            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png"
-                    alt="Icono Instagram"></a>
-            <div class="contacto">
-                <h3>Contacto</h3>
-                <div class="icons">
-                    <a href="callto:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
-                </div>
-                <div class="icons">
-                    <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
-                </div>
-                <div class="icons">
-                    <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="../img/ubicacion.png" alt="Icono ubicacion"></a>
-                </div>
+            <div class="redes">
+                <a href="https://wa.me/+5491121841123" target="_blank"></a>
+                <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"></a>
+                <a href="https://www.instagram.com/miltokis/" target="_blank"></a>
+                <a href="tel:45459002" target="_blank"></a>
+                <a href="mailto:milton_xsiempre@hotmail.com" target="_blank"></a>
+                <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0" target="_blank"></a>
             </div>
             <div class="text-center">
                 <p>Granja-Verdulería La Única</p>
