--- a/pages/dondenosencontramos.html
+++ b/pages/dondenosencontramos.html
@@ -89,24 +89,13 @@
     <footer>
         <div class="info">
             <h2>Nuestras redes sociales:</h2>
-            <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp2.png" alt=""></a>
-            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png"
-                    alt="Icono Facebook"></a>
-            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png"
-                    alt="Icono Instagram"></a>
-            <div class="contacto">
-                <h3>Contacto</h3>
-                <div class="icons">
-                    <a href="tel:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
-                </div>
-                <div class="icons">
-                    <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
-                </div>
-                <div class="icons">
-                    <a
-                        href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img
-                            src="../img/ubicacion.png" alt="Icono ubicacion"></a>
-                </div>
+            <div class="redes">
+                <a href="https://wa.me/+5491121841123" target="_blank"></a>
+                <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"></a>
+                <a href="https://www.instagram.com/miltokis/" target="_blank"></a>
+                <a href="tel:45459002" target="_blank"></a>
+                <a href="mailto:milton_xsiempre@hotmail.com" target="_blank"></a>
+                <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0" target="_blank"></a>
             </div>
             <div class="text-center">
                 <p>Granja-Verdulería La Única</p>
