--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
 
 <body>
     <!--! JERARQUIA DE LOS ENCABEZADOS-->
-    <!--! ENLACES -->
     <h1></h1>
+    <!--! ENLACES -->
+    <!-- Mayor cantidad de enlaces internos que externos-->
+    <a href="./pages/servicios.html"></a>
+    <!--! TITLE -->
+    <audio src="" title=""></audio>
+    <video src="" title=""></video>
+    <!--! ALT -->
+    <img src="" alt="">
+    <!--! ETIQUETAS SEMANTICAS -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
