--- a/index.html
+++ b/index.html
@@ -8,26 +8,37 @@
     <!---Bootstrap css(cambia la letra del footer!!!)-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!--* KEYWORDS -->
-        <meta name="keywords" content="veduleria, carniceria, granja, almacen, frutas, manzana, manzana verde, banana, lechuga, tomate, cherry, bife, pescado, carbon, enlatados, milanesas, milanesas de carne, milanesas de pollo, pescado rebozado, milanesa de pescado, choclo, brocoli, morron verde, naranja de jugo, zapallito, ajo, portobello, champiñon, embutidos, hamburguesas, hamburguesas de carne, hamburguesas de pollo, salchichas, pan rallado, condimentos, huevos, sandia, melon, ensaladas, bandejas, bandeja de verdura, bandeja de wok, bandeja de calabaza, sopa, patitas de pollo, caritas, mccain, milanesa de soja, chorizo, morcilla, chorizo bierzo, chorizo candalerio bierzo, asado, tira de asado, matambre, provoleta, carne molida,  pechuga, pechugas de pollo, anana, papaya, granada, kiwi, uva, palta, mango, jengibre, sal, sal parillera, remolacha, ciruela, zapallo, alitas, alitas de pollo, pata muslo, vegano, hamburguesas veganas, nuggets veganos, green kitchen, bastones de queso, cebolla, berenjena, zukini, maple de huevo, papa, zanahoria, pera, tomate perita, papa blanca, morron, apio, repollo, verdeo, perejil, puerro, berro, ají, picante, pedidos, envios,">
-        <!--* DESCRIPTION -->
-        <!--ENTRE 70 A 320 CARACTERES // 180CARACTERES LO JUSTO-->
-        <meta name="description" content="Somos un negocio donde trabajar con productos naturales de primera calidad, es nuestra mayor prioridad. Desde productos frescos como carnes y verduras hasta productos de almacen y granja como enlatados, huevos, empanizados y muchos más! Siempre dispuestos a atenderlo con la mayor paciencia y amabalidad que pudiese esperar.">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <!--* KEYWORDS -->
+    <meta name="keywords" content="veduleria, carniceria, granja, almacen, frutas, manzana, manzana verde, banana, lechuga, tomate, cherry, bife, pescado, carbon, enlatados, milanesas, milanesas de carne, milanesas de pollo, pescado rebozado, milanesa de pescado, choclo, brocoli, morron verde, naranja de jugo, zapallito, ajo, portobello, champiñon, embutidos, hamburguesas, hamburguesas de carne, hamburguesas de pollo, salchichas, pan rallado, condimentos, huevos, sandia, melon, ensaladas, bandejas, bandeja de verdura, bandeja de wok, bandeja de calabaza, sopa, patitas de pollo, caritas, mccain, milanesa de soja, chorizo, morcilla, chorizo bierzo, chorizo candalerio bierzo, asado, tira de asado, matambre, provoleta, carne molida,  pechuga, pechugas de pollo, anana, papaya, granada, kiwi, uva, palta, mango, jengibre, sal, sal parillera, remolacha, ciruela, zapallo, alitas, alitas de pollo, pata muslo, vegano, hamburguesas veganas, nuggets veganos, green kitchen, bastones de queso, cebolla, berenjena, zukini, maple de huevo, papa, zanahoria, pera, tomate perita, papa blanca, morron, apio, repollo, verdeo, perejil, puerro, berro, ají, picante, pedidos, envios,">
+    <!--* DESCRIPTION -->
+    <!--ENTRE 70 A 320 CARACTERES // 180CARACTERES LO JUSTO-->
+    <meta name="description" content="Somos un negocio donde trabajar con productos naturales de primera calidad, es nuestra mayor prioridad. Desde productos frescos como carnes y verduras hasta productos de almacen y granja como enlatados, huevos, empanizados y muchos más! Siempre dispuestos a atenderlo con la mayor paciencia y amabalidad que pudiese esperar.">
+
+    <!-- PROTOCOLO OPEN GRAPH-->
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="La Unica | Carniceria y Verduleria">
+    <meta property="og:url" content="https://launica01.netlify.app/">
+    <meta property="og:image" content="">
+    <meta property="og:decription" content="Somos un negocio donde trabajar con productos naturales de primera calidad, es nuestra mayor prioridad. Desde productos frescos como carnes y verduras hasta productos de almacen y granja como enlatados, huevos, empanizados y muchos más! Siempre dispuestos a atenderlo con la mayor paciencia y amabalidad que pudiese esperar.">
+
     <link rel="stylesheet" href="./css/style.css">
-    <title>Carniceria y Verduleria "La Única"</title>
+    <title>La Unica | Carniceria y Verduleria</title>
+
 </head>
 
 <body>
     <!--! JERARQUIA DE LOS ENCABEZADOS-->
-    <h1></h1>
+    <!-- <h1></h1> -->
     <!--! ENLACES -->
     <!-- Mayor cantidad de enlaces internos que externos-->
-    <a href="./pages/servicios.html"></a>
+    <!-- <a href="./pages/servicios.html"></a> -->
     <!--! TITLE -->
-    <audio src="" title=""></audio>
-    <video src="" title=""></video>
+    <!-- <audio src="" title=""></audio> -->
+    <!-- <video src="" title=""></video> -->
     <!--! ALT -->
-    <img src="" alt="">
+    <!-- <img src="" alt=""> -->
     <!--! ETIQUETAS SEMANTICAS -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
